--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/homeStyle.css">
-    <script src="scripts/homeScript.js"></script>
+    <script src="scripts/homeScript.js" type="module"></script>
 
     <title>Home</title>
 </head>
@@ -14,49 +14,18 @@
 <body>
 
     <header id='header'>
-        <span class="logo">couchy</span>
+        <span class="logo"><img src="/styles/img/LOGO.svg" alt="Couchy"></span>
         <span id="burgerMenuIcon">burger Icon</span>
     </header>
 
     <div id="mainContainer" class="container">
-        
-        <p id="brandDescription" class="description" id="">A stylish design, a great comfort, a smooth conversion, with
-            <span class="logo">couchy</span> at home, you will
-            never feel tired anymore.
-        </p>
 
-
-        <div id="inputContainer" class="container">
-            <div id="inputConvertContainer" class="inputContainer">
-                <button id="buttonConvertToCouch" class="btn inputConvertContainer">
-                    Plie
-                </button>
-                <button id="buttonConvertToBed" class="btn inputConvert">
-                    Déplie
-                </button>
-            </div>
-            <div id="colorContainer" class="inputContainer">
-                <button id="buttonColor1" class="btn inputColor">
-                    Red
-                </button>
-                <button id="buttonColor1" class="btn inputColor">
-                    Blue
-                </button>
-                <button id="buttonColor1" class="btn inputColor">
-                    Green
-                </button>
-            </div>
-        </div>
-
-
-        <div id="couchPictureContainer" class="container">
-            <img src="/styles/img/test-couch.jpg" alt="couch">
-        </div>
-
-        <div id="priceContainer" class="container">
-            <button id="buttonBuy" class="btn">
-                BUY
-            </button>
+        <div id="brandDescriptionContainer">
+            <p id="brandDescription" class="description" id="">A stylish design, a great comfort, a smooth conversion,
+                with
+                <span class="logo">couchy</span> at home, you will
+                never feel tired anymore.
+            </p>
             <div id="priceDisplay" class="display">
                 <span>
                     5000€
@@ -67,8 +36,33 @@
             </div>
         </div>
 
+        <div id="inputContainer" class="container">
+            <div id="inputConvertContainer" class="inputContainer">
+                <img id="buttonConvertToCouch" class="btn inputConvert"
+                    src="styles/img/Archive/Desktop/CTA/Closed Sofa.svg">
+                <img id="buttonConvertToBed" class="btn inputConvert" src="styles/img/Archive/Desktop/CTA/OpenSofa.svg">
+            </div>
+            <div id="colorContainer" class="inputContainer">
+                <button class="buttonToHide" id="buttonColor2"><img class="btn inputColor"
+                        src="styles/img/Archive/Desktop/CTA/Color 1.svg"></button>
+                <button class="buttonToHide" id="buttonColor1"><img class="btn inputColor boxShadow"
+                        src="styles/img/Archive/Desktop/CTA/Color 1 Copy.svg"></button>
+                <button class="buttonToHide" id="buttonColor3"><img class="btn inputColor"
+                        src="styles/img/Archive/Desktop/CTA/Color 1 Copy 2.svg"></button>
+            </div>
+        </div>
+
+
+        <div id="couchPictureContainer" class="container">
+            <img id="couchPicture" src="/styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
+        </div>
+
+        <div id="priceContainer" class="container">
+            <img id="buyButton" src="/styles/img/Archive/Desktop/CTA/Buy.svg" alt="">
+        </div>
+
         <div id="decorationContainer" class="container">
-            <img src="/styles/img/test-plant.jpg" alt="flower">
+            <img id="cactusPicture" src="/styles/img/cactus_canapé_rouge.png" alt="flower">
         </div>
     </div>
 
