--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/homeStyle.css">
     <script src="scripts/homeScript.js" type="module"></script>
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:600,800&display=swap" rel="stylesheet">
 
     <title>Home</title>
 </head>
@@ -15,22 +16,22 @@
 
     <header id='header'>
         <span class="logo"><img src="/styles/img/LOGO.svg" alt="Couchy"></span>
-        <span id="burgerMenuIcon">burger Icon</span>
+        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="/styles/img/Archive/Desktop/Icon/Burger.svg"
+                alt=""></span>
     </header>
 
     <div id="mainContainer" class="container">
 
         <div id="brandDescriptionContainer">
-            <p id="brandDescription" class="description" id="">A stylish design, a great comfort, a smooth conversion,
+            <p id="brandDescription" class="description">A stylish design, a great comfort, a smooth conversion,
                 with
                 <span class="logo">couchy</span> at home, you will
                 never feel tired anymore.
             </p>
             <div id="priceDisplay" class="display">
-                <span>
-                    5000€
-                </span>
-                <span>
+                <span id="oldPrice">
+                    5000€</span>
+                <span id="newPrice">
                     999€
                 </span>
             </div>
