routes hoppefully fixed for github

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header id='header'>
         <span class="logo"><img src="/styles/img/LOGO.svg" alt="Couchy"></span>
-        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="/styles/img/Archive/Desktop/Icon/Burger.svg"
+        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="styles/img/Archive/Desktop/Icon/Burger.svg"
                 alt=""></span>
     </header>
 
@@ -55,15 +55,15 @@
 
 
         <div id="couchPictureContainer" class="container">
-            <img id="couchPicture" src="/styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
+            <img id="couchPicture" src="styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
         </div>
 
         <div id="priceContainer" class="container">
-            <img id="buyButton" src="/styles/img/Archive/Desktop/CTA/Buy.svg" alt="">
+            <img id="buyButton" src="styles/img/Archive/Desktop/CTA/Buy.svg" alt="">
         </div>
 
         <div id="decorationContainer" class="container">
-            <img id="cactusPicture" src="/styles/img/cactus_canapé_rouge.png" alt="flower">
+            <img id="cactusPicture" src="styles/img/cactus_canapé_rouge.png" alt="flower">
         </div>
     </div>
 
