--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header id='header'>
         <span class="logo"><img src="/styles/img/LOGO.svg" alt="Couchy"></span>
-        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="styles/img/Archive/Desktop/Icon/Burger.svg"
+        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="./styles/img/Archive/Desktop/Icon/Burger.svg"
                 alt=""></span>
     </header>
 
@@ -40,30 +40,31 @@
         <div id="inputContainer" class="container">
             <div id="inputConvertContainer" class="inputContainer">
                 <img id="buttonConvertToCouch" class="btn inputConvert"
-                    src="styles/img/Archive/Desktop/CTA/Closed Sofa.svg">
-                <img id="buttonConvertToBed" class="btn inputConvert" src="styles/img/Archive/Desktop/CTA/OpenSofa.svg">
+                    src="./styles/img/Archive/Desktop/CTA/Closed Sofa.svg">
+                <img id="buttonConvertToBed" class="btn inputConvert"
+                    src="./styles/img/Archive/Desktop/CTA/OpenSofa.svg">
             </div>
             <div id="colorContainer" class="inputContainer">
                 <button class="buttonToHide" id="buttonColor2"><img class="btn inputColor"
-                        src="styles/img/Archive/Desktop/CTA/Color 1.svg"></button>
+                        src="./styles/img/Archive/Desktop/CTA/Color 1.svg"></button>
                 <button class="buttonToHide" id="buttonColor1"><img class="btn inputColor boxShadow"
-                        src="styles/img/Archive/Desktop/CTA/Color 1 Copy.svg"></button>
+                        src="./styles/img/Archive/Desktop/CTA/Color 1 Copy.svg"></button>
                 <button class="buttonToHide" id="buttonColor3"><img class="btn inputColor"
-                        src="styles/img/Archive/Desktop/CTA/Color 1 Copy 2.svg"></button>
+                        src="./styles/img/Archive/Desktop/CTA/Color 1 Copy 2.svg"></button>
             </div>
         </div>
 
 
         <div id="couchPictureContainer" class="container">
-            <img id="couchPicture" src="styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
+            <img id="couchPicture" src="./styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
         </div>
 
         <div id="priceContainer" class="container">
-            <img id="buyButton" src="styles/img/Archive/Desktop/CTA/Buy.svg" alt="">
+            <img id="buyButton" src="./styles/img/Archive/Desktop/CTA/Buy.svg" alt="">
         </div>
 
         <div id="decorationContainer" class="container">
-            <img id="cactusPicture" src="styles/img/cactus_canapé_rouge.png" alt="flower">
+            <img id="cactusPicture" src="./styles/img/cactus_canapé_rouge.png" alt="flower">
         </div>
     </div>
 
