few bugs corrected, added side furniture change feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="styles/homeStyle.css">
     <script src="scripts/homeScript.js" type="module"></script>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:600,800&display=swap" rel="stylesheet">
-
     <title>Home</title>
 </head>
 
@@ -16,7 +15,7 @@
 
     <header id='header'>
         <span class="logo"><img src="/styles/img/LOGO.svg" alt="Couchy"></span>
-        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="./styles/img/Archive/Desktop/Icon/Burger.svg"
+        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="/styles/img/Archive/Desktop/Icon/Burger.svg"
                 alt=""></span>
     </header>
 
@@ -25,7 +24,7 @@
         <div id="brandDescriptionContainer">
             <p id="brandDescription" class="description">A stylish design, a great comfort, a smooth conversion,
                 with
-                <span class="logo">couchy</span> at home, you will
+                <span class="logo">COUCHY</span> at home, you will
                 never feel tired anymore.
             </p>
             <div id="priceDisplay" class="display">
@@ -39,38 +38,36 @@
 
         <div id="inputContainer" class="container">
             <div id="inputConvertContainer" class="inputContainer">
-                <img id="buttonConvertToCouch" class="btn inputConvert"
-                    src="./styles/img/Archive/Desktop/CTA/Closed Sofa.svg">
-                <img id="buttonConvertToBed" class="btn inputConvert"
-                    src="./styles/img/Archive/Desktop/CTA/OpenSofa.svg">
+                <button class="btn buttonToHide btnConvertContainer">
+                    <img id="buttonConvertToCouch" class="btn btnCouchSelected">
+                </button>
+                <button class="btn buttonToHide btnConvertContainer">
+                    <img id="buttonConvertToBed" class="btn btnBed">
+                </button>
             </div>
             <div id="colorContainer" class="inputContainer">
-                <button class="buttonToHide" id="buttonColor2"><img class="btn inputColor"
-                        src="./styles/img/Archive/Desktop/CTA/Color 1.svg"></button>
-                <button class="buttonToHide" id="buttonColor1"><img class="btn inputColor boxShadow"
-                        src="./styles/img/Archive/Desktop/CTA/Color 1 Copy.svg"></button>
-                <button class="buttonToHide" id="buttonColor3"><img class="btn inputColor"
-                        src="./styles/img/Archive/Desktop/CTA/Color 1 Copy 2.svg"></button>
+                <button class="buttonToHide" id="buttonColor1"><img class="btn inputColor" id="imgButtonColor1"
+                        src="/styles/img/Archive/Desktop/CTA/Color 1.svg"></button>
+                <button class="buttonToHide" id="buttonColor2"><img class="btn inputColor boxShadow"
+                        id="imgButtonColor2" src="/styles/img/Archive/Desktop/CTA/Color 1 Copy.svg"></button>
+                <button class="buttonToHide" id="buttonColor3"><img class="btn inputColor" id="imgButtonColor3"
+                        src="/styles/img/Archive/Desktop/CTA/Color 1 Copy 2.svg"></button>
             </div>
         </div>
 
 
         <div id="couchPictureContainer" class="container">
-            <img id="couchPicture" src="./styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
+            <img id="couchPicture" src="/styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
         </div>
 
         <div id="priceContainer" class="container">
-            <img id="buyButton" src="./styles/img/Archive/Desktop/CTA/Buy.svg" alt="">
+            <img id="buyButton" src="/styles/img/Archive/Desktop/CTA/Buy.svg" alt="">
         </div>
 
-        <div id="decorationContainer" class="container">
-            <img id="cactusPicture" src="./styles/img/cactus_canapé_rouge.png" alt="flower">
+        <div id="furnitureContainer" class="container">
+            <img id="furniturePicture" src="/styles/img/RedPage/cactus_canapé_rouge.png" alt="furniture">
         </div>
     </div>
-
-
-
-
 
     <footer></footer>
 
