test file location gitHub

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 <body>
 
     <header id='header'>
-        <span class="logo"><img src="/styles/img/LOGO.svg" alt="Couchy"></span>
-        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="/styles/img/Archive/Desktop/Icon/Burger.svg"
-                alt=""></span>
+        <span class="logo"><img src="./styles/img/LOGO.svg" alt="Couchy"></span>
+        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="/styles/img/Icon/Burger.svg" alt=""></span>
     </header>
 
     <div id="mainContainer" class="container">
