test2 file location gitHub

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header id='header'>
-        <span class="logo"><img src="./styles/img/LOGO.svg" alt="Couchy"></span>
+        <span class="logo"><img src="styles/img/LOGO.svg" alt="Couchy"></span>
         <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="/styles/img/Icon/Burger.svg" alt=""></span>
     </header>
 
