--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header id='header'>
         <span class="logo"><img src="styles/img/LOGO.svg" alt="Couchy"></span>
-        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="/styles/img/Icon/Burger.svg" alt=""></span>
+        <span id="burgerMenuContainer"><img class="burgerMenuIcon" src="styles/img/Icon/Burger.svg" alt=""></span>
     </header>
 
     <div id="mainContainer" class="container">
@@ -46,25 +46,25 @@
             </div>
             <div id="colorContainer" class="inputContainer">
                 <button class="buttonToHide" id="buttonColor1"><img class="btn inputColor" id="imgButtonColor1"
-                        src="/styles/img/Archive/Desktop/CTA/Color 1.svg"></button>
+                        src="styles/img/Archive/Desktop/CTA/Color 1.svg"></button>
                 <button class="buttonToHide" id="buttonColor2"><img class="btn inputColor boxShadow"
-                        id="imgButtonColor2" src="/styles/img/Archive/Desktop/CTA/Color 1 Copy.svg"></button>
+                        id="imgButtonColor2" src="styles/img/Archive/Desktop/CTA/Color 1 Copy.svg"></button>
                 <button class="buttonToHide" id="buttonColor3"><img class="btn inputColor" id="imgButtonColor3"
-                        src="/styles/img/Archive/Desktop/CTA/Color 1 Copy 2.svg"></button>
+                        src="styles/img/Archive/Desktop/CTA/Color 1 Copy 2.svg"></button>
             </div>
         </div>
 
 
         <div id="couchPictureContainer" class="container">
-            <img id="couchPicture" src="/styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
+            <img id="couchPicture" src="styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
         </div>
 
         <div id="priceContainer" class="container">
-            <img id="buyButton" src="/styles/img/Archive/Desktop/CTA/Buy.svg" alt="">
+            <img id="buyButton" src="styles/img/Archive/Desktop/CTA/Buy.svg" alt="">
         </div>
 
         <div id="furnitureContainer" class="container">
-            <img id="furniturePicture" src="/styles/img/RedPage/cactus_canapé_rouge.png" alt="furniture">
+            <img id="furniturePicture" src="styles/img/RedPage/cactus_canapé_rouge.png" alt="furniture">
         </div>
     </div>
 
