--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
         <div id="couchPictureContainer" class="container">
-            <img id="couchPicture" src="styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
+            <img id="couchPicture" src="./styles/img/RedPage/canapé_rouges_large_2.png" alt="couch">
         </div>
 
         <div id="priceContainer" class="container">
